--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack.prod.js",
-    "build": "webpack --mode production",
+    "build": "webpack --config webpack.prod.js",
     "dev": "webpack-dev-server --config webpack.dev.js"
   },
   "eslintConfig": {
