--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
     "build": {
       "env": {
-        "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "true",
-        "PUPPETEER_EXECUTABLE_PATH": "/usr/bin/google-chrome-stable"
+        "PUPPETEER_SKIP_CHROMIUM_DOWNLOAD": "false",
+        "PUPPETEER_EXECUTABLE_PATH": ""
       }
     }
 }
